--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
+
+    <servlet-api.version>2.5</servlet-api.version>
+    <jstl.version>1.2</jstl.version>
   </properties>
 
   <dependencyManagement>
@@ -37,6 +40,20 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
         <version>${org.springframework.version}</version>
+      </dependency>
+
+      <!-- This dependencies are needed because we are working with an older version of Apache Tomcat -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>${servlet-api.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
