--- a/services/pom.xml
+++ b/services/pom.xml
@@ -35,6 +35,13 @@
       <artifactId>interfaces</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>ar.edu.itba.paw</groupId>
+      <artifactId>persistence</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
   
 </project>
