--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -28,6 +28,12 @@
       <artifactId>models</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <!--<dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>-->
   </dependencies>
 
 </project>
