--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -59,4 +59,9 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/jsp/error404.jsp</location>
+  </error-page>
+
 </web-app>
