Unit tests implemented

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
+    <org.postgresql.version>42.2.16</org.postgresql.version>
+
+<!--    Testing dependencies versions -->
+    <mockito.version>2.25.1</mockito.version>
+    <junit.version>4.12</junit.version>
+    <hsqldb.version>2.4.1</hsqldb.version>
 
     <servlet-api.version>2.5</servlet-api.version>
     <jstl.version>1.2</jstl.version>
@@ -52,9 +58,36 @@
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>42.2.16</version>
+        <version>${org.postgresql.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>${hsqldb.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${org.springframework.version}</version>
+        <scope>test</scope>
+      </dependency>
 
       <!-- This dependencies are needed because we are working with an older version of Apache Tomcat -->
       <dependency>
