--- a/services/pom.xml
+++ b/services/pom.xml
@@ -27,6 +27,16 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>ar.edu.itba.paw</groupId>
