--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,24 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
+<!--   Spring Dependencies -->
     <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
+    <spring-security.version>4.0.4.RELEASE</spring-security.version>
+
+<!--   JDBC Dependencies -->
     <org.postgresql.version>42.2.16</org.postgresql.version>
 
-<!--    Testing dependencies versions -->
+<!--   Testing Dependencies -->
     <mockito.version>2.25.1</mockito.version>
     <junit.version>4.12</junit.version>
     <hsqldb.version>2.4.1</hsqldb.version>
 
+<!--   Logging Dependencies -->
+    <org.slf4j.version>1.7.5</org.slf4j.version>
+    <logback.version>1.1.2</logback.version>
+    <logback-ext-spring.version>0.1.1</logback-ext-spring.version>
+
+<!--   Dependencies Needed for compatibility with older Apache Versions  -->
     <servlet-api.version>2.5</servlet-api.version>
     <jstl.version>1.2</jstl.version>
   </properties>
@@ -53,6 +63,24 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-jdbc</artifactId>
         <version>${org.springframework.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring-security.version}</version>
       </dependency>
 
       <dependency>
@@ -87,6 +115,37 @@
         <artifactId>spring-test</artifactId>
         <version>${org.springframework.version}</version>
         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${org.slf4j.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${org.slf4j.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.logback-extensions</groupId>
+        <artifactId>logback-ext-spring</artifactId>
+        <version>${logback-ext-spring.version}</version>
+        <scope>runtime</scope>
       </dependency>
 
       <!-- This dependencies are needed because we are working with an older version of Apache Tomcat -->
