--- a/services/pom.xml
+++ b/services/pom.xml
@@ -29,6 +29,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
@@ -50,6 +55,7 @@
       <version>${project.parent.version}</version>
       <scope>runtime</scope>
     </dependency>
+
   </dependencies>
   
 </project>
