--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
 
     <servlet-api.version>2.5</servlet-api.version>
     <jstl.version>1.2</jstl.version>
+
+    <javax.validation-api.version>1.0.0.GA</javax.validation-api.version>
+    <org.hibernate.validator>4.3.1.Final</org.hibernate.validator>
+
   </properties>
+
 
   <dependencyManagement>
     <dependencies>
@@ -69,6 +74,18 @@
         <artifactId>jstl</artifactId>
         <version>${jstl.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>${javax.validation-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${org.hibernate.validator}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
