--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -130,6 +130,11 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.passay</groupId>
+      <artifactId>passay</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
