--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,12 @@
       <param-name>contextClass</param-name>
       <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
     </init-param>
+
+    <!-- This exception is handle by the applications like every other exception -->
+    <init-param>
+      <param-name>throwExceptionIfNoHandlerFound</param-name>
+      <param-value>true</param-value>
+    </init-param>
     
     <load-on-startup>1</load-on-startup>
   </servlet>
@@ -58,10 +64,5 @@
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-
-  <error-page>
-    <error-code>404</error-code>
-    <location>/WEB-INF/jsp/error404.jsp</location>
-  </error-page>
 
 </web-app>
