--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
     <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
     <spring-security.version>4.0.4.RELEASE</spring-security.version>
 
+<!--  Javax Mail Dependency  -->
+    <javax-mail.version>1.4.7</javax-mail.version>
+
 <!--   JDBC Dependencies -->
     <org.postgresql.version>42.2.16</org.postgresql.version>
 
@@ -64,6 +67,13 @@
         <version>${org.springframework.version}</version>
       </dependency>
 
+<!--  Mail    -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${org.springframework.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-jdbc</artifactId>
@@ -92,6 +102,13 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-taglibs</artifactId>
         <version>${spring-security.version}</version>
+      </dependency>
+
+<!--  Mail    -->
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>${javax-mail.version}</version>
       </dependency>
 
       <dependency>
