--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -28,6 +28,12 @@
       <artifactId>models</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+    </dependency>
+
     <!--<dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
