--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,9 @@
     <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
     <spring-security.version>4.0.4.RELEASE</spring-security.version>
 
-<!--  Javax Mail Dependency  -->
+<!--  Mail Dependencies  -->
     <javax-mail.version>1.4.7</javax-mail.version>
+    <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
 
 <!--   JDBC Dependencies -->
     <org.postgresql.version>42.2.16</org.postgresql.version>
@@ -73,6 +74,19 @@
         <artifactId>spring-context-support</artifactId>
         <version>${org.springframework.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+        <version>${thymeleaf.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring4</artifactId>
+        <version>${thymeleaf.version}</version>
+      </dependency>
+<!--  Mail    -->
 
       <dependency>
         <groupId>org.springframework</groupId>
