--- a/services/pom.xml
+++ b/services/pom.xml
@@ -19,8 +19,7 @@
 
   <name>services</name>
 
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://pawserver.it.itba.edu.ar/paw-2020b-3/</url>
 
   <dependencies>
     <dependency>
