--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -18,9 +18,8 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>interfaces</name>
-  
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+
+  <url>http://pawserver.it.itba.edu.ar/paw-2020b-3/</url>
 
   <dependencies>
     <dependency>
