--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -15,8 +15,7 @@
 
   <name>persistence</name>
 
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://pawserver.it.itba.edu.ar/paw-2020b-3/</url>
 
   <dependencies>
     <dependency>
