--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -22,8 +22,7 @@
 
   <name>webapp</name>
 
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://pawserver.it.itba.edu.ar/paw-2020b-3/</url>
 
   <build>
     <finalName>webapp</finalName>
