--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
     <javax-mail.version>1.4.7</javax-mail.version>
     <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
 
+<!--  File Upload Dependency  -->
+    <commons-fileupload.version>1.3.1</commons-fileupload.version>
+
 <!--   JDBC Dependencies -->
     <org.postgresql.version>42.2.16</org.postgresql.version>
 
@@ -129,6 +132,13 @@
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${org.postgresql.version}</version>
+      </dependency>
+
+
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>${commons-fileupload.version}</version>
       </dependency>
 
       <dependency>
