--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>${org.springframework.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.thymeleaf</groupId>
         <artifactId>thymeleaf</artifactId>
         <version>${thymeleaf.version}</version>
@@ -265,14 +271,6 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>9.4.31.v20200723</version>
-          <configuration>
-            <scanIntervalSeconds>5</scanIntervalSeconds>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
