--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -29,8 +29,11 @@
 
     <plugins>
       <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <packagingExcludes>**/logback-test.xml</packagingExcludes>
+        </configuration>
       </plugin>
     </plugins>
   </build>
