Disabled war packaging exclude for test-logback.xml to enable develop logging to console

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -28,13 +28,13 @@
     <finalName>webapp</finalName>
 
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <packagingExcludes>**/logback-test.xml</packagingExcludes>
-        </configuration>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-war-plugin</artifactId>-->
+<!--        <configuration>-->
+<!--          <packagingExcludes>**/logback-test.xml</packagingExcludes>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 
