Added chooString() to all models

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -89,8 +89,8 @@
       <artifactId>postgresql</artifactId>
     </dependency>
 
-    <dependency
-    ><groupId>org.slf4j</groupId>
+    <dependency>
+      <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
 
