--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -58,6 +58,12 @@
       <artifactId>interfaces</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
