Migrated testing from Postgresql to HSQLDB. Four tests where disabled along the way.

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -27,15 +27,15 @@
   <build>
     <finalName>webapp</finalName>
 
-<!--    <plugins>-->
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-war-plugin</artifactId>-->
-<!--        <configuration>-->
-<!--          <packagingExcludes>**/logback-test.xml</packagingExcludes>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <packagingExcludes>**/logback-test.xml</packagingExcludes>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <dependencies>
