--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -132,6 +132,11 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+    </dependency>
+
     <!-- This dependencies are needed because we are working with an older version of Apache Tomcat -->
     <dependency>
       <groupId>javax.servlet</groupId>
