--- a/models/pom.xml
+++ b/models/pom.xml
@@ -32,6 +32,11 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+    </dependency>
+
   </dependencies>
   
 </project>
