Master ready for deploy

--- a/webapp/src/main/resources/config/web-config-production.properties
+++ b/webapp/src/main/resources/config/web-config-production.properties
@@ -13,3 +13,5 @@ mail.password=#Papanata
 # Application Base Path Configuration
 app.base_path=http://pawserver.it.itba.edu.ar/paw-2020b-3
 
+strings.cache=3600
+
