--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -24,12 +24,17 @@
   </listener>
 
   <servlet>
-    <servlet-name>dispatcher</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <servlet-name>jersey-servlet</servlet-name>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+
+<!--        <init-param>-->
+<!--          <param-name>contextClass</param-name>-->
+<!--          <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>-->
+<!--        </init-param>-->
 
     <init-param>
-      <param-name>contextClass</param-name>
-      <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-value>ar.edu.itba.paw.webapp.controller</param-value>
     </init-param>
 
     <!-- This exception is handle by the applications like every other exception -->
@@ -40,6 +45,25 @@
 
     <load-on-startup>1</load-on-startup>
   </servlet>
+
+  <!-- TODO: Delete -->
+<!--  <servlet>-->
+<!--    <servlet-name>dispatcher</servlet-name>-->
+<!--    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+
+<!--    <init-param>-->
+<!--      <param-name>contextClass</param-name>-->
+<!--      <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>-->
+<!--    </init-param>-->
+
+<!--    &lt;!&ndash; This exception is handle by the applications like every other exception &ndash;&gt;-->
+<!--    <init-param>-->
+<!--      <param-name>throwExceptionIfNoHandlerFound</param-name>-->
+<!--      <param-value>true</param-value>-->
+<!--    </init-param>-->
+
+<!--    <load-on-startup>1</load-on-startup>-->
+<!--  </servlet>-->
 
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
@@ -76,9 +100,15 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+<!-- TODO: Delete -->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>dispatcher</servlet-name>-->
+<!--    <url-pattern>/</url-pattern>-->
+<!--  </servlet-mapping>-->
+
   <servlet-mapping>
-    <servlet-name>dispatcher</servlet-name>
-    <url-pattern>/</url-pattern>
+    <servlet-name>jersey-servlet</servlet-name>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
   <mime-mapping>
