--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
         <artifactId>hk2</artifactId>
         <version>2.5.0-b05</version>
         <exclusions>
-<!--      El bean-validator incluye jboss.logging que colisiona con el hibernate    -->
+<!--      El bean-validator incluye jboss-logging que colisiona con hibernate    -->
           <exclusion>
             <groupId>org.glassfish.hk2.external</groupId>
             <artifactId>bean-validator</artifactId>
