--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ target/
 .factorypath
 .factorypath/
 
-# Exclude Frontend Library Modules
+# Exclude Frontend Libraries
 /frontend/node_modules/
+/frontend/bower_components/
