--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-  <display-name>PAW test application</display-name>
+  <display-name>Moovify application</display-name>
 
   <context-param>
     <param-name>contextClass</param-name>
@@ -41,25 +41,6 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
 
-  <!-- TODO: Delete -->
-<!--  <servlet>-->
-<!--    <servlet-name>dispatcher</servlet-name>-->
-<!--    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
-
-<!--    <init-param>-->
-<!--      <param-name>contextClass</param-name>-->
-<!--      <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>-->
-<!--    </init-param>-->
-
-<!--    &lt;!&ndash; This exception is handle by the applications like every other exception &ndash;&gt;-->
-<!--    <init-param>-->
-<!--      <param-name>throwExceptionIfNoHandlerFound</param-name>-->
-<!--      <param-value>true</param-value>-->
-<!--    </init-param>-->
-
-<!--    <load-on-startup>1</load-on-startup>-->
-<!--  </servlet>-->
-
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -95,15 +76,9 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-<!-- TODO: Delete -->
-<!--  <servlet-mapping>-->
-<!--    <servlet-name>dispatcher</servlet-name>-->
-<!--    <url-pattern>/</url-pattern>-->
-<!--  </servlet-mapping>-->
-
   <servlet-mapping>
     <servlet-name>jersey-servlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 
   <mime-mapping>
