--- a/pom.xml
+++ b/pom.xml
@@ -404,7 +404,7 @@
     <module>persistence</module>
     <module>models</module>
     <module>interfaces</module>
-    <!--<module>frontend</module>-->
+    <module>frontend</module>
   </modules>
         
 </project>
