--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -5,14 +5,13 @@
     "angular": "~1.2.0",
     "angular-route": "~1.2.0",
     "angular-translate": "~2.4.2",
-    "bootstrap-sass-official": "~3.2.0",
     "es5-shim": "~3.1.0",
     "json3": "~3.3.1",
     "moment": "~2.8.3",
-    "requirejs": "~2.1.11"
+    "requirejs": "~2.1.11",
+    "uikit": "git://github.com/uikit/uikit.git#3.x"
   },
   "devDependencies": {
-    "bootstrap": "~3.3.1"
   }
 }
 
