--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,9 @@
     <servlet-api.version>2.5</servlet-api.version>
     <jstl.version>1.2</jstl.version>
 
+<!--  JWT Utility Dependencies  -->
+    <io.jsonwebtoken.version>0.11.2</io.jsonwebtoken.version>
+
     <org.passay.version>1.0</org.passay.version>
   </properties>
 
@@ -338,6 +341,26 @@
         <groupId>org.passay</groupId>
         <artifactId>passay</artifactId>
         <version>${org.passay.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-api</artifactId>
+        <version>${io.jsonwebtoken.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-impl</artifactId>
+        <version>${io.jsonwebtoken.version}</version>
+        <scope>runtime</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-jackson</artifactId>
+        <version>${io.jsonwebtoken.version}</version>
+        <scope>runtime</scope>
       </dependency>
 
     </dependencies>
