--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.12",
+    "connect-modrewrite": "^0.10.2",
     "grunt": "^0.4.1",
-    "grunt-cli": "",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-bower-requirejs": "^1.1.0",
+    "grunt-cli": "",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
