--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -38,12 +38,6 @@
       <param-value>true</param-value>
     </init-param>
 
-    <!-- This exception is handle by the applications like every other exception -->
-    <init-param>
-      <param-name>throwExceptionIfNoHandlerFound</param-name>
-      <param-value>true</param-value>
-    </init-param>
-
     <load-on-startup>1</load-on-startup>
   </servlet>
 
@@ -73,19 +67,25 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <filter>
-    <filter-name>openEntityManagerInViewFilter</filter-name>
-    <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>openEntityManagerInViewFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+<!--  <filter>-->
+<!--    <filter-name>openEntityManagerInViewFilter</filter-name>-->
+<!--    <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>openEntityManagerInViewFilter</filter-name>-->
+<!--    <url-pattern>/*</url-pattern>-->
+<!--  </filter-mapping>-->
 
   <servlet-mapping>
     <servlet-name>jersey-servlet</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
+
+<!-- TODO: Change -->
+  <error-page>
+    <error-code>404</error-code>
+    <location>/resources/index.html</location>
+  </error-page>
 
   <mime-mapping>
     <extension>ico</extension>
