--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,13 @@
         <version>${jersey.version}</version>
       </dependency>
 
+<!--   JERSEY MULTIPART   -->
+      <dependency>
+        <groupId>org.glassfish.jersey.media</groupId>
+        <artifactId>jersey-media-multipart</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
