--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-bower-requirejs": "^1.1.0",
-    "grunt-cli": "",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
@@ -31,6 +30,8 @@
     "grunt-wiredep": "^1.7.0",
     "load-grunt-tasks": "^0.4.0",
     "requirejs": "^2.1.11",
-    "time-grunt": "^0.3.1"
-  }
+    "time-grunt": "^0.3.1",
+    "grunt-cli": "^1.3.2"
+  },
+  "dependencies": {}
 }
