--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,7 +13,8 @@
     "requirejs": "~2.1.11",
     "uikit": "git://github.com/uikit/uikit.git#3.x",
     "restangular": "~1.6.1",
-    "angular-sanitize": "~1.5.0"
+    "angular-sanitize": "~1.5.0",
+    "js-joda-timezone": "js-joda#^2.1.1"
   },
   "devDependencies": {}
 }
