--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -32,7 +32,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-<!--          <packagingExcludes>**/logback-test.xml</packagingExcludes>-->
+          <packagingExcludes>**/logback-test.xml</packagingExcludes>
           <webResources>
             <resource>
               <directory>${project.parent.basedir}/frontend/dist/resources/</directory>
